@@ -1928,16 +1928,22 @@ case $host in
 	fat_path="x86 x86/fat x86/i486
 		  x86/k6 x86/k6/mmx x86/k6/k62mmx
 		  x86/k7 x86/k7/mmx
+		  x86/k8 x86/k10 x86/bobcat
 		  x86/pentium x86/pentium/mmx
 		  x86/p6 x86/p6/mmx x86/p6/p3mmx x86/p6/sse2
-		  x86/pentium4 x86/pentium4/mmx x86/pentium4/sse2"
+		  x86/pentium4 x86/pentium4/mmx x86/pentium4/sse2
+		  x86/core2 x86/coreinhm x86/coreisbr
+		  x86/atom x86/atom/mmx x86/atom/sse2 x86/nano"
       fi
 
       if test "$abi" = 64; then
 	gcc_64_cflags=""
 	extra_functions_64="$extra_functions_64 fat fat_entry"
 	path_64="x86_64/fat x86_64"
-	fat_path="x86_64 x86_64/fat x86_64/k8 x86_64/k10 x86_64/bd1 x86_64/bobcat x86_64/pentium4 x86_64/core2 x86_64/coreinhm x86_64/coreisbr x86_64/atom x86_64/nano"
+	fat_path="x86_64 x86_64/fat
+		  x86_64/k8 x86_64/k10 x86_64/bd1 x86_64/bobcat
+		  x86_64/pentium4 x86_64/core2 x86_64/coreinhm x86_64/coreisbr
+		  x86_64/atom x86_64/nano"
 	fat_functions="$fat_functions addmul_2 addlsh1_n addlsh2_n sublsh1_n"
       fi
 
